# arcadia-pycolor

./: .env.copy  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.ipynb  README.md  apc.yml  color_usage.ipynb  conftest.py  index.html  mkdocs.yml  pyproject.toml  setup.py  style_usage.ipynb  usage_example.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy-mkdocs-site.yml  lint-and-test.yml  lint.yml
README_files/: cell_drawing.tiff
arcadia_pycolor/: __init__.py  arcadia_pycolor.py  classes.py  classes_new.py  colors.py  colors_new.py  cvd.py  display.py  display_plotly.py  fonts.py  functions.py  gradient.py  gradients.py  hexcode.py  mpl.py  palette.py  palettes.py  plot.py  plotly.py  plotly_utils.py  style_defaults.py  styles.py  utils.py
arcadia_pycolor/mplstyles/: arcadia_2024.mplstyle  arcadia_basic.mplstyle
arcadia_pycolor/tests/: test_gradients.py  test_hexcode.py  test_import.py  test_mpl_conversions.py  test_mpl_save_figure.py  test_mpl_setup.py  test_palette.py  test_placeholder.py  test_plotly_save_figure.py  test_plotly_setup.py  test_utils.py
arcadia_pycolor/tests/integration/: test_barplots.py  test_bespoke_plots.py  test_plotting.py
arcadia_pycolor/tests/plotting/: test_3d_plots.py  test_barplots.py  test_bespoke_plots.py  test_seaborn_plots.py
color_usage/: color_usage.ipynb  index.html
color_vision_deficiency_tools/: color_vision_deficiency_tools.ipynb  index.html
docs/: README.md  color_usage.ipynb  color_vision_deficiency_tools.ipynb  mpl_quickstart.md  plotly_quickstart.md  quickstart.md  style_usage.ipynb  using_colors.ipynb
docs/examples/: 3d_plot.ipynb  3d_plots.ipynb  bar_plots.ipynb  barplot.ipynb  heatmap.ipynb  heatmaps.ipynb  index.md  plotly_subplots.ipynb  scatterplot.ipynb  stacked_bar_plots.ipynb  stacked_barplot.ipynb  stacked_line_plots.ipynb  stacked_lineplot.ipynb
docs/stylesheets/: extra.css
envs/: apc.yml  dev.yml
examples/: index.html
examples/3d_plots/: index.html
examples/bar_plots/: index.html
examples/heatmaps/: index.html
examples/plotly_subplots/: index.html
examples/scatter_plots/: index.html  scatter_plots.ipynb
examples/stacked_bar_plots/: index.html
examples/stacked_line_plots/: index.html
mpl_quickstart/: index.html
notebooks/: ArcadiaColorTester.ipynb  PerceptuallyUniformColormaps.ipynb  import_test.ipynb
plot_testing/: bar.ipynb  heatmap.ipynb  stacked_bar.ipynb  stacked_line.ipynb
plotly_quickstart/: index.html
search/: search_index.json
skills/arcadia-pycolor/: SKILL.md
skills/arcadia-pycolor/references/: api.md  colors.md
style_usage/: index.html  style_usage.ipynb
stylesheets/: extra.css
