[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arcadia-pycolor"
version = "0.5.0"
description = "A Python package to distribute Arcadia's color and style guidelines for figures."
authors = [
    "Keith Cheveralls <keith.cheveralls@arcadiascience.com>",
    "Dennis Sun <dennis.sun@arcadiascience.com>",
]
readme = "README.md"
license = "MIT"
packages = [
    { include = "arcadia_pycolor" },
]
include = ["mplstyles/*"]
homepage = "https://github.com/Arcadia-Science/arcadia-pycolor"
repository = "https://github.com/Arcadia-Science/arcadia-pycolor"
documentation = "https://github.com/Arcadia-Science/arcadia-pycolor"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pypi_test"
# Note: poetry only support the "legacy" API.
url = "https://test.pypi.org/legacy/"

[tool.poetry.dependencies]
colorspacious = ">=1.1.2"
# Disallow matplotlib 3.8.0 because it has a bug in `LinearSegmentedColormap`.
matplotlib = ">=3.7,!=3.8.0"
numpy = ">=1.20"
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.25.2"
jupyter = ">=1.0.0"
pandas = "^2.2.2"
pre-commit = "3.5.0"
pyright = "^1.1.367"
pytest = "8.2.1"
ruff = "0.4.4"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"

[tool.ruff]
# The directories to consider when resolving first- vs. third-party imports.
src = ["."]
line-length = 100
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Ignore star and unused imports.
"__init__.py" = ["F403", "F405"]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warning
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
order-by-type = true
no-lines-before = ["future", "standard-library"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["."]

# TODO: add type hints for the tests.
exclude = ["**/tests/**"]

# Pyright reports a lot of unknown-member errors for matplotlib objects.
# For now, rather than add even more `type: ignore` comments, we'll just disable these errors.
reportUnknownMemberType = false
