[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "arcadia-pycolor"
description = "A Python package to distribute Arcadia's color and style guidelines for figures."
authors = [
    { name = "Keith Cheveralls", email = "keith.cheveralls@arcadiascience.com" },
    { name = "Dennis Sun", email = "dennis.sun@arcadiascience.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
# The version is derived from git tags at build time by hatch-vcs.
dynamic = ["version"]
dependencies = [
    "colorspacious>=1.1.2",
    # Disallow matplotlib 3.8.0 because it has a bug in `LinearSegmentedColormap`.
    "matplotlib>=3.7,!=3.8.0",
    "numpy>=1.20",
    "plotly>=6.1.1",
    "kaleido>=1.3,<2.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/Arcadia-Science/arcadia-pycolor"
Repository = "https://github.com/Arcadia-Science/arcadia-pycolor"
Documentation = "https://github.com/Arcadia-Science/arcadia-pycolor"

[dependency-groups]
dev = [
    "ipykernel>=6.25.2",
    "jupyter>=1.0.0",
    "pandas>=2.2.2,<3.0.0",
    "pre-commit==4.6.0",
    "pyright>=1.1.408,<2.0.0",
    "pytest>=9.0.3",
    "ruff==0.15.16",
    "scikit-learn>=1.5.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "mkdocs-material>=9.6.12,<10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7,<2.0.0",
    "mkdocs-git-committers-plugin-2>=2.5.0,<3.0.0",
    "mkdocs-jupyter>=0.25.1,<0.27.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["arcadia_pycolor"]

[tool.ruff]
# The directories to consider when resolving first- vs. third-party imports.
src = ["."]
line-length = 100
indent-width = 4
extend-include = ["*.ipynb"]
# Markdown files (e.g. skill docs) are intentionally not wrapped, so exclude them from linting.
extend-exclude = ["*.md"]

[tool.ruff.lint.per-file-ignores]
# Ignore star and unused imports.
"__init__.py" = ["F403", "F405"]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warning
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
order-by-type = true
no-lines-before = ["future", "standard-library"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["."]

# Setting `exclude` overrides pyright's default excludes, so we must list them explicitly
# (otherwise pyright would type-check the uv-managed `.venv` and other generated directories).
# TODO: add type hints for the tests.
exclude = [
    "**/tests/**",
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "dist",
]

# Pyright reports a lot of unknown-member errors for matplotlib objects.
# For now, rather than add even more `type: ignore` comments, we'll just disable these errors.
reportUnknownMemberType = false

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore deprecation warnings for Plotly.
    'ignore:.* is deprecated!:DeprecationWarning',
]
